--- a/Tutorial/Tutorial03/TBA2102_T3.rmd
+++ b/Tutorial/Tutorial03/TBA2102_T3.rmd
@@ -62,9 +62,16 @@ Note about *working directories* in R Markdown. If you do not specify your worki
 ```{r load-libraries, echo=TRUE}
 # intall required packages if you have not (suggested packages: dplyr, tidyr, rpivotTable, knitr)
 install.packages("dplyr")
+install.packages("tidyr")
+install.packages("rpivotTable")
+install.packages("knitr")
+
 #only need to run this code once to install the package
 # load required packages 
 library("dplyr")
+library("tidyr")
+library("rpivotTable")
+library("knitr")
 
 ```
 
@@ -89,12 +96,16 @@ The worksheet Base Data in the Excel file Bank Credit Risk Data provides informa
 
 ```{r q1-read-dataset, echo=TRUE}
 #put in your working directory folder pathname 
-setwd("/Users/xuanze/Dropbox/00 NUS/TBA2012/Tutorial/Tutorial03")
+#setwd("/Users/xuanze/Dropbox/00 NUS/TBA2012/Tutorial/Tutorial03")
+setwd("E:/Dropbox/00 NUS/TBA2012/Tutorial/Tutorial03")
+
 #import data file into RStudio
-install.packages("xlsx")
-library("xlsx")
-Q1_data <- read.xlsx("/Users/xuanze/Dropbox/00 NUS/TBA2012/Tutorial/Tutorial03/Bank Credit Risk Data.xlsx",1,rowIndex = 3:428)
-head(Q1_data)
+install.packages("readxl")
+library("readxl")
+#Import
+BD <- read_excel("Bank Credit Risk Data.xlsx",sheet = "Base Data",skip = 2)
+#Inspect
+View(BD)
 ```
 <p>
 **You will continue to build on the dashboards that we have started in lecture 3.**
@@ -110,8 +121,39 @@ head(Q1_data)
 
 ```{r q1.(a), echo=TRUE}
 ##Enter your codes here
-Total <- sum(Q1_data$Checking,Q1_data$Savings)
-print(Total)
+#(i)
+#Number of dimension
+dim(BD)
+BD$Total <- BD$Checking + BD$Savings
+dim(BD)
+#Or use mutate
+#BD2 <- BD %>% mutate(Total2 = Checking + Savings)
+
+#(ii)
+#Get counts
+HouseFreq <- BD%>%count(Housing)
+#Bare bone piechart
+pie(HouseFreq$n, labels= c("Other","Own","Rent"))
+#View in table form
+kable(HouseFreq, caption = "Frequency of Bank customers by housing)")
+#Get counts in vector form
+slice.house <- HouseFreq
+#Compute percentage
+house.piepercent <- 100 * round(HouseFreq$n / sum(HouseFreq,2))
+#Extract housing labels
+label <- HouseFreq$Housing
+label <- paste(label,",",sep="") #Default of sep is ""
+label <- paste(label,house.piepercent)
+label<-paste(label,"%",sep="")
+pie(slice.house,
+    labels = label,
+    col = c("blue","cyan","dodgerblue"),
+    radius = 1,
+    )
+
+#(iii)
+#Scatter plot
+plot(BD$Total,BD$`Months Employed`, main = "Scatterplot of Months employed to Total",ylab = "MonthsEmployed",xlab = "Total")
 
 ```
 
@@ -129,6 +171,16 @@ Type your answer here.
 
 ```{r q1.(b), echo=TRUE}
 ##Enter your codes here
+#Create contingency table for Credit Risk abd job with Job as columns and credit risk as rows
+BDb1 <- BD %>% group_by(`Credit Risk`,Job) %>% tally()
+#Change from long to wide form
+BDb1.spread <- BDb1 %>% spread(key = Job,value = n)
+
+kable(BDb1.spread,caption = "Contingency table for credit risk and job")
+
+#Plot the grouped stack barplot
+
+barmatrix.BDb1 <- as.matrix(BDb1.spread[,c(2,5)])
 
 
 
