--- a/Tutorial/Tutorial03/TBA2102_T3.rmd
+++ b/Tutorial/Tutorial03/TBA2102_T3.rmd
@@ -179,8 +179,11 @@ BDb1.spread <- BDb1 %>% spread(key = Job,value = n)
 kable(BDb1.spread,caption = "Contingency table for credit risk and job")
 
 #Plot the grouped stack barplot
-
+#First extract and convert the 2nd to 5th column into a matrix
 barmatrix.BDb1 <- as.matrix(BDb1.spread[,c(2,5)])
+bar_Col1 <- c("blue","gray")
+barplot(barmatrix.BDb1,col = bar_Col1,main = "Credit Risk and Job")
+legend ("topright",cex = 0.6)
 
 
 
