--- a/Tutorial/Tutorial10/TBA2102_T10.Rmd
+++ b/Tutorial/Tutorial10/TBA2102_T10.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Tutorial 10: Linear Optimization'
-author: "TBA2102: REPLACE WITH YOUR NAME"
+author: "TBA2102: ANG XUAN ZE"
 date: "Discussion date: 13 April 6.30pm"
 output: html_document
 ---
@@ -77,9 +77,17 @@ Start by formulating the problem statement as an optimization problem.
 <p style="color:red">**BEGIN: YOUR ANSWER**</p>
 
 <p style="color:blue">
-Define your decision variables first
-</p>
-Enter your codes for the linear program (table) here. 
+Let decision variables $X_1$, $X_2$, $X_3$ be the number of days to run Factories A, B and C respectively.</p>
+
+Minimize total cost using decision variables $X_1$, $X_2$, $X_3$ | Cost = 1000$X_1$ + 1200 $X_2$ + 1500 $X_3$
+--- | --- 
+Subject to |  
+Contract for cars | 30$X_1$ + 40$X_2$ + 50$X_3$ $\geq$ 5000
+Contract for animals | 20$X_1$ + 50$X_2$ + 40$X_3$ $\geq$ 3000
+Contract for robots | 30$X_1$ + 10$X_2$ + 15$X_3$ $\geq$ 2500
+Non-Negativity Constraint 1 | $X_1$ + $\quad$ + $\quad$ $\geq$ 0
+Non-Negativity Constraint 2 | $\quad$ + $X_2$ + $\quad$ $\geq$ 0
+Non-Negativity Constraint 3 | $\quad$ + $\quad$ + $X_2$ $\geq$ 0
 
 <p style="color:red">**END: YOUR ANSWER**</p>
 
@@ -90,14 +98,29 @@ Enter your codes for the linear program (table) here.
 
 
 ```{r q1b-lp, echo=TRUE}
+#Defining parameters
+objective.fn <- c(1000,1200,1500)
+const.max <- matrix(c(30, 40, 50,
+                      20, 50, 40,
+                      30, 10, 15),
+                    ncol = 3,
+                    byrow = TRUE)
+const.dir <- c(">=",">=",">=")
+const.rhs <- c(5000, 3000, 2500)
 
-# Enter your codes here
+#Solving model
+lp.solution <- lp("min", objective.fn, const.max, const.dir, const.rhs, compute.sens = TRUE)
+#Decision variables values
+lp.solution$solution
+
+lp.solution
 
 ```
 
 <p style="color:blue">
-Type your answer here.
-</p>
+Optimum values of $X_1$, $X_2$, $X_3$ is 47.6, 0, 71.43 <br>
+That is, run Factory A for 47.6 days, Factory B for 0 days and Factory C for 71.4 days.<br>
+Minimum cost to run three factories is \$154761.90</p>
 
 <p style="color:red">**END: YOUR ANSWER**</p>
 
@@ -108,23 +131,54 @@ Re-produce a new table summarizing the optimization problem (including the exist
 <p style="color:red">**BEGIN: YOUR ANSWER**</p>
 
 <p style="color:blue">
-Define your decision variables first
-</p>
+Let decision variables $X_1$, $X_2$, $X_3$ be the number of days to run Factories A, B and C respectively.</p>
 
-Enter your codes for the linear program (table) here. 
+
+
+Minimize total cost using decision variables $X_1$, $X_2$, $X_3$ | Cost = 1000$X_1$ + 1200 $X_2$ + 1500 $X_3$
+--- | --- 
+Subject to |  
+Contract for cars | 30$X_1$ + 40$X_2$ + 50$X_3$ $\geq$ 5000
+Contract for animals | 20$X_1$ + 50$X_2$ + 40$X_3$ $\geq$ 3000
+Contract for robots | 30$X_1$ + 10$X_2$ + 15$X_3$ $\geq$ 2500
+Time Constraint 1 | $X_1$ + $\quad$ + $\quad$ $\leq$ 60
+Time Constraint 2 | $\quad$ + $X_2$ + $\quad$ $\leq$ 60
+Time Constraint 3 | $\quad$ + $\quad$ + $X_3$ $\leq$ 60
+Non-Negativity Constraint 1 | $X_1$ + $\quad$ + $\quad$ $\geq$ 0
+Non-Negativity Constraint 2 | $\quad$ + $X_2$ + $\quad$ $\geq$ 0
+Non-Negativity Constraint 3 | $\quad$ + $\quad$ + $X_2$ $\geq$ 0
 
 ```{r q1c-lp, echo=TRUE}
+#Defining parameters
+objective.fn <- c(1000,1200,1500)
+const.max <- matrix(c(30, 40, 50,
+                      20, 50, 40,
+                      30, 10, 15,
+                      1, 0, 0,
+                      0, 1, 0,
+                      0, 0, 1),
+                    ncol = 3,
+                    byrow = TRUE)
+const.dir <- c(">=",">=",">=","<=","<=","<=")
+const.rhs <- c(5000, 3000, 2500, 60, 60, 60)
 
-# Enter your codes here
+#Solving model
+lp.solution <- lp("min", objective.fn, const.max, const.dir, const.rhs, compute.sens = TRUE)
+#Decision variables values
+lp.solution$solution
 
+lp.solution
+
+lp.solution$sens.coef.from
+
+lp.solution$sens.coef.to
 ```
 
 <p style="color:blue">
-Type your answer here.
-</p>
-
-# Enter your codes for the linear program (table) here. 
-</p>
+Optimum values of $X_1$, $X_2$, $X_3$ is 48.88889, 13.33333, 60.00000 <br>
+That is, run Factory A for 48.89 days, Factory B for 13.33 days and Factory C for 60 days.<br>
+Minimum cost to run three factories is \$154888.90<br>
+As long as values remain from sens.coef.from -> sens.coef.to, Minimum cost will remain.</p>
 
 <p style="color:red">**END: YOUR ANSWER**</p>
 
@@ -132,14 +186,24 @@ Type your answer here.
 
 <p style="color:red">**BEGIN: YOUR ANSWER**</p>
 
+```{r q1z-lp, echo=TRUE}
+#Total number of cars, animals, robots
+num_cars <- sum(lp.solution$solution*c(30,40,50))
+num_animals <- sum(lp.solution$solution*c(20,50,40))
+num_robots <- sum(lp.solution$solution*c(30,10,15))
 
-```{r q1d-lp, echo=TRUE}
-
-# Enter your codes here. 
+cat(num_cars, num_animals,num_robots)
 ```
 <p style="color:blue">
-Type your answer here.
+Cars and robots are binding.<br>
+Total number of cars (5000) and robots (2500) are equal to the RHS of the value of constraint; shadow price is non-zero.
 </p>
+
+```{r q1d-lp, echo=TRUE}
+lp.solution$solution
+```
+<p style="color:blue">
+Time constraint 3 is binding here, as it is equal to the RHS.</p>
 
 
 <p style="color:red">**END: YOUR ANSWER**</p>
@@ -152,11 +216,14 @@ Type your answer here.
 
 
 ```{r q1e-lp, echo=TRUE}
-# Enter your codes here. 
+lp.solution$duals
 ```
 
 <p style="color:blue">
-Type your answer here.
+Binding constraints have non-zero shadow prices.<br>
+If we make one more car (e.g. 5001), cost incurred will be \$28.88.<br>
+Non-binding constraints have zero shadow prices.<br>
+If we make one more robot (e.g. 3001), there will be no effect on the price.
 </p>
 
 <p style="color:red">**END: YOUR ANSWER**</p>
@@ -172,8 +239,17 @@ Q2a) Write out the decision variables, objective function and constraints (using
 <p style="color:red">**BEGIN: YOUR ANSWER**</p>
 
 <p style="color:blue">
-Type your answer here.
+Let decision variables $X_1$ be number of chairs and $X_2$ be number of tables.
 </p>
+
+Maximize total profit using decision variables $X_1$, $X_2$ | Profit = 50$X_1$ + 120 $X_2$
+--- | --- 
+Subject to |  
+Budget Constraint | 3$X_1$ + 7$X_2$ $\leq$ 60
+Contract Constraint 1 | $X_1$ + $\quad$ $\geq$ 10
+Contract Constraint 2 | $\quad$ + $X_2$ $\geq$ 5
+Non-Negativity Constraint 1 | $X_1$ + $\quad$ $\geq$ 0
+Non-Negativity Constraint 2 | $\quad$ + $X_2$ $\geq$ 0
 
 <p style="color:red">**END: YOUR ANSWER**</p>
 
@@ -183,13 +259,27 @@ Q2b) Are there any feasible solutions, and if so, how many chairs and tables sho
 <p style="color:red">**BEGIN: YOUR ANSWER**</p>
 
 ```{r q2b-lp, echo=TRUE}
+#Defining parameters
+objective.fn <- c(50,120)
+const.mat <- matrix(c(3, 7,
+                      1, 0,
+                      0, 1),
+                    ncol = 2,
+                    byrow = TRUE)
+const.dir <- c("<=",">=",">=")
+const.rhs <- c(60, 10, 5)
 
-# Enter your codes here. 
+#Solving model
+lp.solution <- lp("max", objective.fn, const.mat, const.dir, const.rhs, compute.sens = TRUE)
+#Decision variables values
+lp.solution$solution
+
+lp.solution
 ```
 
 
 <p style="color:blue">
-Type your answer here.
+No feasible solution.
 </p>
 
 
@@ -202,10 +292,26 @@ Q2c) Now you decide to rent a neighbouring factory, which adds another 60 produc
 <p style="color:red">**BEGIN: YOUR ANSWER**</p>
 
 ```{r q2c-lp, echo=TRUE}
-# Enter your codes here. 
+#Defining parameters
+objective.fn <- c(50,120)
+const.mat <- matrix(c(3, 7,
+                      1, 0,
+                      0, 1),
+                    ncol = 2,
+                    byrow = TRUE)
+const.dir <- c("<=",">=",">=")
+const.rhs <- c(120, 10, 5)
+
+#Solving model
+lp.solution <- lp("max", objective.fn, const.mat, const.dir, const.rhs, compute.sens = TRUE)
+#Decision variables values
+lp.solution$solution
+
+lp.solution
 ```
 <p style="color:blue">
-Type your answer here.
+The optimal solution is to make 10 chairs and 12.86 tables. <br>
+With a profit of \$2042.86.
 </p>
 
 <p style="color:red">**END: YOUR ANSWER**</p>
@@ -220,12 +326,15 @@ Q2d) Use sensitivity analysis to answer the following questions based on the ans
 
 
 ```{r q2d-lp, echo=TRUE}
-# Enter your codes here. 
+lp.solution$sens.coef.from
+lp.solution$sens.coef.to
+lp.solution$duals
 ```
 
 
 <p style="color:blue">
-Type your answer here.
+Increase the selling price to above $51.43 for chair production to be profitable. <br>
+Adding 1 more production hour will increase profit by $17.14.
 </p>
 
 <p style="color:red">**END: YOUR ANSWER**</p>
